# cmake_examples

EXTRA_SOURCES/libraries_exercise/: add.cpp  add.h  calculator.cpp  calculator.h  cli_based_calculator.cpp  dialog_based_calculator.cpp  divide.cpp  divide.h  multiply.cpp  multiply.h  sign_to_str.cpp  sign_to_str.h  subtract.cpp  subtract.h
EXTRA_SOURCES/libraries_exercise/special_logging/: logging.h
boost/source/: CMakeLists.txt  main.cpp
build_types/source/: CMakeLists.txt  main.cpp
conan/source/: CMakeLists.txt  conanfile.txt  main.cpp
cpm/source/: CMakeLists.txt  data.json  main.cpp
cross_compilation/source/: CMakeLists.txt
ctest/source/: CMakeLists.txt  catch_tests.cpp  lib.cpp  lib.h  my_add_tests.cpp  my_multiply_tests.cpp
custom_tasks/source/: CMakeLists.txt  app_with_generated_header.cpp  generator.cpp  generator.py  hasher.cpp  hello_printer.cpp
doxygen/source/: CMakeLists.txt  class.cpp  main.cpp
doxygen/source/cmake/: enable_doxygen.cmake
exercises/first_time/sources/: CMakeLists.txt  byebye.cpp  hello.cpp  println.cpp  println.h
exercises/functions/source/: CMakeLists.txt  main.cpp
exercises/ifs_and_loops/source/: CMakeLists.txt
exercises/string_math_list/source/: CMakeLists.txt
functions_and_macros/source/: CMakeLists.txt
generator_expressions/source/: CMakeLists.txt
gtest/source/: CMakeLists.txt  lib_tests.cpp
ifs/source/: CMakeLists.txt
install/source/: CMakeLists.txt  my_app.cpp
install/source/my_lib/: my_lib.cpp  my_lib.h
libraries/source/: CMakeLists.txt  main.cpp
libraries/source/science_printer/: SciencePrinter.h
loops/source/: CMakeLists.txt
minimal_cmakelistst/sources/: CMakeLists.txt
modules/source/: CMakeLists.txt
modules/source/cmake/: MyModule.cmake  OtherModule.cmake
presets/source/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  extra_app.cpp
scopes/: CMakeLists.txt
source_files_organization/source/: CMakeLists.txt  README.md
source_files_organization/source/apps/: CMakeLists.txt  hello_world.cpp
source_files_organization/source/cmake/: print_debug_vars.cmake
source_files_organization/source/docs/: HelloWorld.md
source_files_organization/source/src/: CMakeLists.txt
source_files_organization/source/src/hello_world_printer/: CMakeLists.txt  hello_world_printer.cpp
source_files_organization/source/tests/: CMakeLists.txt  hello_world_printer_test.cpp
string_math_list/source/: CMakeLists.txt
subdirectories/source/: CMakeLists.txt
subdirectories/source/app/: CMakeLists.txt  main.cpp
subdirectories/source/cmake/: print_debug_vars.cmake
subdirectories/source/lib/: CMakeLists.txt  lib.cpp  lib.h
superbuild/source/: CMakeLists.txt
system_introspection/source/: CMakeLists.txt  host_info.h.in  main.cpp
testing_dev_environment/: main.cpp
useful_modules/source/: CMakeLists.txt
variables/: CMakeLists.txt
